# fastEDM-python

./: 404.html  CMakeLists.txt  LICENSE  README.md  chicago_easy_edm_example.py  index.html  mkdocs.yml  pyproject.toml  setup.py  sitemap.xml
.github/workflows/: publish-mkdocs.yml  python-package.yml  wasm-wheels.yml
docs/: fastEDM-0.0.1-cp310-cp310-emscripten_3_1_14_wasm32.whl  index.md  manifolds.html  manifolds.md  manifolds.py
fastEDM/: __init__.py  easy_edm.py  edm.py  edm_summary.py
manifolds/: fastEDM-0.0.1-cp310-cp310-emscripten_3_1_14_wasm32.whl  index.html  latexifier-1.0.8-py2.py3-none-any.whl  manifolds.py
search/: search_index.json
src/: .clang-format  Makevars  common.cpp  common.h  cpu.cpp  cpu.h  distances.cpp  distances.h  edm.cpp  edm.h  library_prediction_split.h  manifold.cpp  manifold.h  python.cpp  stats.cpp  stats.h
tests/: helper.py  test.py  test_ci.py  test_easy_edm.py  test_pybind11.py  test_save_flags.py
